p4-translation/tests/DefaultIncompatible.mj.err
 line 1, column 19: error: default is incompatible with method type (f)
