p4-translation/tests/DefaultIncompatible.mj
type t = object { f() := F; };
def F() {}
